add second iter: by comments